<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context="phongban.suanhanvien.suanhanvien">

    <androidx.appcompat.widget.Toolbar
        android:layout_marginTop="20sp"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_thongtincu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50sp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_suathongtin"
            android:textColor="#2196F3"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/edt_hoten"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginBottom="20sp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/tv_hoten" />

        <EditText
            android:id="@+id/edt_chucvu"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:background="@drawable/custom_edittext"
            android:hint="@string/tv_chucvu" />

        <Button
            android:id="@+id/btn_sua"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:backgroundTint="#D35781"
            android:text="@string/tv_sua" />
    </LinearLayout>

</LinearLayout>