<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="settings.settings">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="67dp"
        android:src="@drawable/nishkam"
        />

    <RelativeLayout
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="30sp"
        >

        <ImageView
            android:id="@+id/alarm"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/alarm1"
            android:layout_marginRight="15sp"
            />


        <ImageView
            android:id="@+id/search"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/search"
            android:layout_toRightOf="@id/alarm"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon"
        android:layout_marginLeft="10sp"
        android:layout_marginTop="20sp"
        android:text="@string/tv_account"
        android:textSize="40sp" />

    <RelativeLayout
        android:id="@+id/relay_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_below="@id/tv_account">

        <TextView
            android:id="@+id/tv_information"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_information"
            android:layout_marginLeft="20sp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/user"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="370sp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_information"
            android:layout_centerHorizontal="true"
            android:background="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/relay_information">

        <TextView
            android:id="@+id/tv_change_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_change_password"
            android:layout_marginLeft="20sp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/password"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="370sp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_change_password"
            android:layout_centerHorizontal="true"
            android:background="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay_hotline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/relay_change_password">

        <TextView
            android:id="@+id/tv_hotline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_hotline"
            android:layout_marginLeft="20sp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40sp"
            android:text="19003456"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#CF2115"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="370sp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_hotline"
            android:layout_centerHorizontal="true"
            android:background="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/relay_hotline">

        <TextView
            android:id="@+id/tv_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_guide"
            android:layout_marginLeft="20sp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/user_manual"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="370sp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_guide"
            android:layout_centerHorizontal="true"
            android:background="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relay_faq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_below="@id/relay_guide">

        <TextView
            android:id="@+id/tv_faq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_faq"
            android:layout_marginLeft="20sp"
            android:textSize="20sp"
            android:layout_centerVertical="true"
            />

        <ImageView
            android:layout_width="40sp"
            android:layout_height="40sp"
            android:src="@drawable/questions"
            android:layout_marginRight="20sp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="370sp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/tv_faq"
            android:layout_centerHorizontal="true"
            android:background="@color/black" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="370sp"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:textSize="30sp"
        android:textColor="#E50000"
        android:layout_above="@id/options"
        android:layout_marginBottom="30sp"
        android:backgroundTint="#F6B5B5"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:id="@+id/options"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#CABCB9"
        android:layout_alignParentBottom="true"
        android:paddingTop="10sp"
        >

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/house1"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/icon_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/new1"
            android:layout_weight="1"
            />

        <ImageView
            android:id="@+id/icon_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setting1"
            android:layout_weight="1"
            />

    </LinearLayout>
</RelativeLayout>
